--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form action="" method="post">
+      <label for="fullname">Full Name</label>
+      <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" placeholder="Enter Email" required>
+      <label for="phone">Phone No</label>
+      <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
+      <label for="message">Message</label>
+      <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter Message"></textarea>
+      <input type="checkbox" name="checkbox" id="checkbox">
+      <input type="submit" value="Submit">
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
